--- a/My First Project/My First Notebook.ipynb
+++ b/My First Project/My First Notebook.ipynb
@@ -18,7 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "print(\"This is my first Git-integrated Databricks notebook!\")"
+    "`print(\"This is my first Git-integrated Databricks notebook!\")"
    ]
   },
   {
@@ -40,11 +40,11 @@
    "outputs": [],
    "source": [
     "%sh\n",
-    "cd /Workspace/Repos/  # Navigate to your repo\n",
+    "cd /Workspace/Repos/sagittarian.vivek@gmail.com/Databricks-Projects  # Navigate to your repo\n",
     "git status   # Check which files have changed\n",
     "git add .    # Stage all modified files\n",
     "git commit -m \"Updated ETL pipeline\"  # Add a commit message\n",
-    "git push origin main"
+    "git push origin"
    ]
   },
   {
